# demo-faststream

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
demo-aiogram/: .env.template  Dockerfile  run.py
demo-aiogram/app/broker_handlers/: __init__.py  main_handler.py
demo-aiogram/app/config/: __init__.py  config.py
demo-fastapi/: .env.template  Dockerfile  run.py
demo-fastapi/app/api/: __init__.py  routers.py
demo-fastapi/app/broker_handlers/: main_handler.py
demo-fastapi/app/config/: __init__.py  config.py
