[project]
name = "FastStream_demo"
version = "0.1.0"
description = "Learning project: FastStream in aiogram and fastapi projects"
authors = [
    { name = "mks_min", email = "mininname@vk.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]


[tool.poetry.group.dev.dependencies]
